@@ -19,7 +19,6 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -29,14 +28,20 @@ public class ProjectService {
     private final UserService userService;
 
     public List<ProjectDTO> getAllProjectDTO() {
-        return projectRepository.findAll().stream().map(ProjectMapper::toDTO).collect(Collectors.toList());
+        return projectRepository.findAll()
+                .stream()
+                .map(ProjectMapper::toDTO)
+                .toList();
     }
 
     public ProjectDTO addNewProject(NewProject newProject) {
         checkIfProjectNameExists(newProject.name());
-        Project project = new Project(UUID.randomUUID(), newProject.name(), newProject.description());
+        Project project = new Project(
+                UUID.randomUUID(),
+                newProject.name(),
+                newProject.description()
+        );
         if (Objects.nonNull(newProject.userIDs())) {
-            System.out.println("addusers");
             List<User> users = userService.getUsersByPublicId(newProject.userIDs());
             project.addUsersToProject(users);
         }
@@ -46,13 +51,17 @@ public class ProjectService {
 
     public List<ProjectDTO> getProjectsDTOByUserPublicId(UUID userPublicId) {
         User user = userService.getUserByPublicId(userPublicId);
-        return projectRepository.findAllProjectByUserId(user.getId()).stream().map(ProjectMapper::toDTO).collect(Collectors.toList());
+        return projectRepository.findAllProjectByUserId(user.getId())
+                .stream()
+                .map(ProjectMapper::toDTO)
+                .toList();
     }
 
     public void deleteProject(UUID publicId) {
-        projectRepository.findProjectByPublicId(publicId).ifPresentOrElse(project -> projectRepository.deleteById(project.getId()), () -> {
-            throw new NotFoundException("Project not exist with Id: " + publicId);
-        });
+        projectRepository.findProjectByPublicId(publicId)
+                .ifPresentOrElse(project -> projectRepository.deleteById(project.getId()), () -> {
+                    throw new NotFoundException("Project doesn't exist with Id: " + publicId);
+                });
     }
 
     public ProjectDTO updateProject(UUID publicId, ProjectDTO requestProject) {
@@ -76,20 +85,18 @@ public class ProjectService {
 
     protected Project getProjectByPublicId(UUID publicId) {
         return projectRepository.findProjectByPublicId(publicId)
-                .orElseThrow(() -> new NotFoundException("Project not exist with Id: " + publicId));
+                .orElseThrow(() -> new NotFoundException("Project doesn't exist with Id: " + publicId));
     }
 
     protected Project updateProjectWithRequest(ProjectDTO requestProject, Project project) {
         if (Objects.nonNull(requestProject.name())) project.setName(requestProject.name());
-
         if (Objects.nonNull(requestProject.description())) project.setDescription(requestProject.description());
-        // TODO The rest
         return project;
     }
 
     private void checkIfProjectNameExists(String name) {
         if (projectRepository.existsByName(name))
-            throw new BadRequestException("Project is already exist with name: " + name);
+            throw new BadRequestException("Project already exists by name: " + name);
     }
 
     public void addFormToProject(NewForm newForm, UUID projectID) {
@@ -103,7 +110,7 @@ public class ProjectService {
     public List<UserForSelectDTO> getUserForSelectDTOForProjectByPublicId(UUID publicProjectId) {
         return getUserForProjectByPublicId(publicProjectId).stream()
                 .map(UserMapper::toUserForSelectorDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected List<User> getUserForProjectByPublicId(UUID publicProjectId) {
